--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <li><a href="https://github.com/cyhsutw" class="fa-github">GitHub</a></li>
 								<li><a href="https://twitter.com/cyhsutw" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.instagram.com/cyhsutw/" class="fa-instagram">Instagram</a></li>
+                <li><a href="mailto:m@cyhsu.me" class="fa-envelope-o">Email</a></li>
 							</ul>
 						</footer>
 					</section>
