Credit HTML5 UP

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
+              <li>Designed by HTML5 UP!</li>
 						</ul>
 					</footer>
 
